<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MiReceta">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/titulo"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@id/tvTitulo"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/foto_default"
                android:contentDescription="@string/imagen_de_la_receta" />

            <RatingBar
                android:id="@+id/rbCalificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ivImagen"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/tvIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rbCalificacion"
                android:layout_marginLeft="10dp"
                android:text="@string/ingredientes_"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:id="@+id/llIngredientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tvIngredientes"
                android:layout_marginStart="10dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvIngredientes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isScrollContainer="false">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <TextView
                android:id="@+id/tvProcedimientos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llIngredientes"
                android:layout_marginLeft="10dp"
                android:text="@string/procedimiento_"
                android:textColor="@android:color/black"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tvProcedimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvProcedimientos"
                android:layout_marginLeft="10dp"
                android:text="TextView"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />

            <LinearLayout
                android:layout_alignStart="@id/ivImagen"
                android:layout_alignLeft="@id/ivImagen"
                android:layout_alignEnd="@id/ivImagen"
                android:layout_alignRight="@id/ivImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@id/tvProcedimiento">

                <Button
                    android:id="@+id/bEliminar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/eliminar"
                    android:onClick="eliminar"/>

                <ImageView
                    android:id="@+id/test_img"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:alpha="0"
                    android:src="@drawable/blanco"/>

                <Button
                    android:id="@+id/bEditar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/editar"
                    android:onClick="editar" />

            </LinearLayout>

        </RelativeLayout>

</ScrollView>